--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>🎮 MiniJuegos</h1>
+        <h1>🎮 MiniJuegos - Tu portal de entretenimiento</h1>
     </header>
 
     <main>
